--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<link type="text/css" rel="stylesheet" href="/C:\Users\laeti\Documents\GitHub/UDEMY-PROJECT-3/UDEMY-PROJECT-3/main.css"  media="screen,projection"/>
-	<title>UDEMY-PROJECT-3</title>
-</head>
-<body>
-	
-</body>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" type="text/css" href="C:\Users\laeti\Documents\GitHub\UDEMY-PROJECT-3\UDEMY-PROJECT-3/main.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+
+    <title>UDEMY-PROJECT-3</title>
+  </head>
+  <body>
+    <h1>Hello</h1>
+  </body>
 </html>
