--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
           </form>
         </li>
-        <li id="login">
+        <li>
           <button type="button" class="btn btn-outline-primary">Se connecter</button>
           <button type="button" class="btn btn-outline-danger">S'inscrire</button>
         </li>
@@ -49,6 +49,10 @@
     </nav>
 
   <!-- fin de la navbar + dropdown -->
-
+    <div class="middle">
+      <div class="card" style="width: 97rem;">
+        <img class="card-img-top" src="C:\Users\laeti\Documents\GitHub\UDEMY-PROJECT-3\UDEMY-PROJECT-3\img/banniere.jpg" alt="Card image cap">
+      </div>
+    </div>
   </body>
 </html>
