code plus aéré + logo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Udemy</a>
+    <div class="logo"><img src="C:\Users\laeti\Documents\GitHub\UDEMY-PROJECT-2\UDEMY-PROJECT-2\img/udemylogo.png" alt="logo" class="udemylogo"></div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
     </button>
@@ -42,6 +42,8 @@
         </li>
       </ul>
        <li>
+          <a href="#">Devenir Formateur</a>
+          <a href="https://www.udemy.com/cart/" class="pure-button"><img src="C:\Users\laeti\Documents\GitHub\UDEMY-PROJECT-2\UDEMY-PROJECT-2\img/shop.png" class="logo"></a>
           <button type="button" class="btn btn-outline-primary">Se connecter</button>
           <button type="button" class="btn btn-outline-danger">S'inscrire</button>
         </li>
@@ -49,10 +51,15 @@
     </nav>
 
   <!-- fin de la navbar + dropdown -->
+  <!-- début du milieu du contenu -->
+
     <div class="middle">
       <div class="card" style="width: 97rem;">
         <img class="card-img-top" src="C:\Users\laeti\Documents\GitHub\UDEMY-PROJECT-3\UDEMY-PROJECT-3\img/banniere.jpg" alt="Card image cap">
       </div>
     </div>
   </body>
+
+<!-- fin du body -->
+
 </html>
