ajout de banniere middle + button shop et search
css : text-decoration none + fond pour le middle

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- Navbar + dropdown -->
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg">
     <div class="logo"><img src="C:\Users\laeti\Documents\GitHub\UDEMY-PROJECT-2\UDEMY-PROJECT-2\img/udemylogo.png" alt="logo" class="udemylogo"></div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -37,27 +37,62 @@
         <li>
           <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="search" placeholder="Chercher des cours" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          <button class="btn btn my-2 my-sm-0" type="submit"><i class="material-icons">search</i></button>
           </form>
         </li>
       </ul>
        <li>
           <a href="#">Devenir Formateur</a>
-          <a href="https://www.udemy.com/cart/" class="pure-button"><img src="C:\Users\laeti\Documents\GitHub\UDEMY-PROJECT-2\UDEMY-PROJECT-2\img/shop.png" class="logo"></a>
-          <button type="button" class="btn btn-outline-primary">Se connecter</button>
+          <button class="btn btn my-2 my-sm-0" type="submit"><i class="material-icons">shopping_cart</i></button>
+          <button type="button" class="btn btn-light">Se connecter</button>
           <button type="button" class="btn btn-outline-danger">S'inscrire</button>
         </li>
     </div>
     </nav>
 
   <!-- fin de la navbar + dropdown -->
-  <!-- début du milieu du contenu -->
+  <!-- début du jumbotron bannière-->
 
-    <div class="middle">
-      <div class="card" style="width: 97rem;">
-        <img class="card-img-top" src="C:\Users\laeti\Documents\GitHub\UDEMY-PROJECT-3\UDEMY-PROJECT-3\img/banniere.jpg" alt="Card image cap">
+      <div class="jumbotron" style="width: 96em;">
+        <img src="C:\Users\laeti\Documents\GitHub\UDEMY-PROJECT-3\UDEMY-PROJECT-3\img/banniere.jpg" alt="banniere">
+        <div>
+          <p>
+            Vente flash : les cours sont à 10,99 €
+            Vente flash de deux jours ! Obtenez des cours à partir de 10,99 €
+          </p>
+        </div>
       </div>
-    </div>
+
+      <!-- fin du jumbotron bannière-->
+      <!-- début du middle bannière-->
+
+      <div class="middle">
+        <div>
+          <p>
+           <img src="C:\Users\laeti\Documents\GitHub\UDEMY-PROJECT\img/cible1.png" alt="cible1" class="logo">
+            <strong>65000 cours en ligne</strong></br>
+            Explorez une variété de sujets d'actualité.       
+          </p>
+        </div>
+        <div>
+          <p>
+           <img src="C:\Users\laeti\Documents\GitHub\UDEMY-PROJECT\img/cible2.png" alt="cible2" class="logo">        
+            <strong>Cours donnés par des experts</strong></br>
+            Trouvez le formateur qui vous correspond.
+          </p>
+        </div> 
+        <div>
+          <p>
+            <img src="C:\Users\laeti\Documents\GitHub\UDEMY-PROJECT\img/cible3.gif" alt="cible3" class="logo">  
+            <strong>Accès illimité</strong></br>
+            Apprenez à votre rythme
+          </p>
+        </div> 
+      </div>
+
+
+<!-- fin du middle bannière -->
+
   </body>
 
 <!-- fin du body -->
