--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <body>
     <nav class="navbar navbar-expand-lg">
-    <div class="logo"><img src="C:\Users\laeti\Documents\GitHub\UDEMY-PROJECT-2\UDEMY-PROJECT-2\img/udemylogo.png" alt="logo" class="udemylogo"></div>
+    <img src="C:\Users\laeti\Documents\GitHub\UDEMY-PROJECT-2\UDEMY-PROJECT-2\img/udemylogo.png" alt="logo" class="udemylogo"></div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
     </button>
@@ -47,22 +47,25 @@
           <button type="button" class="btn btn-light">Se connecter</button>
           <button type="button" class="btn btn-outline-danger">S'inscrire</button>
         </li>
+      </div>
     </div>
     </nav>
 
   <!-- fin de la navbar + dropdown -->
   <!-- début du jumbotron bannière-->
 
-      <div class="jumbotron" style="width: 96em;">
-        <img src="C:\Users\laeti\Documents\GitHub\UDEMY-PROJECT-3\UDEMY-PROJECT-3\img/banniere.jpg" alt="banniere">
-        <div>
-          <p>
-            Vente flash : les cours sont à 10,99 €
-            Vente flash de deux jours ! Obtenez des cours à partir de 10,99 €
-          </p>
+      <div class="jumbotron jumbotron-fluid">
+        <div class="container text-white">
+          <h1 class="display-6">Ouvrez votre compteur avec
+            des <br> cours au prix de 9,99€</h1>
+          <p class="lead">Profitez de notre meilleur prix sur les cours : à partir de 9,99€.</p>
+          <form class="form-inline mr-5 ">
+            <input class="form-control mr-sm-2" type="search" placeholder="Chercher des cours" aria-label="Search">
+            <button class="btn btn my-2 my-sm-0" type="submit"><i class="material-icons">search</i></button>
+          </form>
         </div>
       </div>
-
+      
       <!-- fin du jumbotron bannière-->
       <!-- début du middle bannière-->
 
@@ -89,8 +92,53 @@
           </p>
         </div> 
       </div>
+      
+      <!-- début des cards -->
 
+        <div class="card-deck">
+          <div class="card">
+          <img class="card-img-top" src="https://udemy-images.udemy.com/course/240x135/1496440_be26_2.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Certified Advanced Angelic Healing</h5>
+            <p class="card-text">Tania Magdalene</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+           </div>
+        </div>
+          <div class="card">
+          <img class="card-img-top" src="https://udemy-images.udemy.com/course/240x135/1576710_292f_5.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">2018 Complete Public Speaking Masterclass Fo...</h5>
+              <p class="card-text">Tj Walker</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+          </div>
+          <div class="card">
+          <img class="card-img-top" src="https://udemy-images.udemy.com/course/240x135/1330590_3cb3.jpg" alt="Card image cap">
+            <div class="card-body">
+               <h5 class="card-title">Become A Learning Machine 2.0: Read 300...</h5>
+                <p class="card-text">Brandon Hakim</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+          <div class="card">
+          <img class="card-img-top" src="https://udemy-images.udemy.com/course/240x135/1483618_54b1_3.jpg" alt="Card image cap">
+            <div class="card-body">
+               <h5 class="card-title">Accelerated Learning Acquire any Skill at 10x..</h5>
+                <p class="card-text">Nandini Rathi</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+          <div class="card">
+          <img class="card-img-top" src="https://udemy-images.udemy.com/course/240x135/1540516_7603.jpg" alt="Card image cap">
+            <div class="card-body">
+               <h5 class="card-title">CBT Cognitive Behavioral Life Coach Certification</h5>
+                <p class="card-text">Joeel & Natalie Rivera</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+          </div>
 
+<!-- fin des cards -->
 <!-- fin du middle bannière -->
 
   </body>
