--- a/index.html
+++ b/index.html
@@ -94,8 +94,63 @@
       </div>
       
       <!-- début des cards -->
+      <!-- première ligne des cards -->
 
         <div class="card-deck">
+          <div class="card">
+          <img class="card-img-top" src="https://udemy-images.udemy.com/course/240x135/1496440_be26_2.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Certified Advanced Angelic Healing</h5>
+            <p class="card-text">Tania Magdalene</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+           </div>
+        </div>
+          <div class="card">
+          <img class="card-img-top" src="https://udemy-images.udemy.com/course/240x135/1576710_292f_5.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">2018 Complete Public Speaking Masterclass Fo...</h5>
+              <p class="card-text">Tj Walker</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+          </div>
+          <div class="card">
+          <img class="card-img-top" src="https://udemy-images.udemy.com/course/240x135/1330590_3cb3.jpg" alt="Card image cap">
+            <div class="card-body">
+               <h5 class="card-title">Become A Learning Machine 2.0: Read 300...</h5>
+                <p class="card-text">Brandon Hakim</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+          <div class="card">
+          <img class="card-img-top" src="https://udemy-images.udemy.com/course/240x135/1483618_54b1_3.jpg" alt="Card image cap">
+            <div class="card-body">
+               <h5 class="card-title">Accelerated Learning Acquire any Skill at 10x..</h5>
+                <p class="card-text">Nandini Rathi</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+          <div class="card">
+          <img class="card-img-top" src="https://udemy-images.udemy.com/course/240x135/1540516_7603.jpg" alt="Card image cap">
+            <div class="card-body">
+               <h5 class="card-title">Certified Aromatherapy Diploma Course</h5>
+                <p class="card-text">Joeel & Natalie Rivera</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+          <div class="card">
+            <img class="card-img-top" src="https://udemy-images.udemy.com/course/240x135/1606056_f9bd_3.jpg" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">CBT Cognitive Behavioral Life Coach Certification</h5>
+                <p class="card-title">Joeel & Natalie Rivera</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              </div>         
+          </div>
+          </div>
+
+    <!-- fin de la première ligne -->
+    <!-- début deuxième ligne -->
+
+          <div class="card-deck">
           <div class="card">
           <img class="card-img-top" src="https://udemy-images.udemy.com/course/240x135/1496440_be26_2.jpg" alt="Card image cap">
           <div class="card-body">
@@ -136,9 +191,67 @@
                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
           </div>
+          <div class="card">
+            <img class="card-img-top" src="https://udemy-images.udemy.com/course/240x135/1606056_f9bd_3.jpg" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">CBT Cognitive Behavioral Life Coach Certification</h5>
+                <p class="card-title">Joeel & Natalie Rivera</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              </div>         
           </div>
 
-<!-- fin des cards -->
+    <!--fin deuxième ligne -->
+    <!-- début troisième ligne -->
+          <div class="card-deck">
+          <div class="card">
+          <img class="card-img-top" src="https://udemy-images.udemy.com/course/240x135/1496440_be26_2.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Certified Advanced Angelic Healing</h5>
+            <p class="card-text">Tania Magdalene</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+           </div>
+        </div>
+          <div class="card">
+          <img class="card-img-top" src="https://udemy-images.udemy.com/course/240x135/1576710_292f_5.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">2018 Complete Public Speaking Masterclass Fo...</h5>
+              <p class="card-text">Tj Walker</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+          </div>
+          <div class="card">
+          <img class="card-img-top" src="https://udemy-images.udemy.com/course/240x135/1330590_3cb3.jpg" alt="Card image cap">
+            <div class="card-body">
+               <h5 class="card-title">Become A Learning Machine 2.0: Read 300...</h5>
+                <p class="card-text">Brandon Hakim</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+          <div class="card">
+          <img class="card-img-top" src="https://udemy-images.udemy.com/course/240x135/1483618_54b1_3.jpg" alt="Card image cap">
+            <div class="card-body">
+               <h5 class="card-title">Accelerated Learning Acquire any Skill at 10x..</h5>
+                <p class="card-text">Nandini Rathi</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+          <div class="card">
+          <img class="card-img-top" src="https://udemy-images.udemy.com/course/240x135/1540516_7603.jpg" alt="Card image cap">
+            <div class="card-body">
+               <h5 class="card-title">CBT Cognitive Behavioral Life Coach Certification</h5>
+                <p class="card-text">Joeel & Natalie Rivera</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+          <div class="card">
+            <img class="card-img-top" src="https://udemy-images.udemy.com/course/240x135/1606056_f9bd_3.jpg" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">CBT Cognitive Behavioral Life Coach Certification</h5>
+                <p class="card-title">Joeel & Natalie Rivera</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              </div>         
+          </div>
+    <!-- fin des cards -->
 <!-- fin du middle bannière -->
 
   </body>
