--- a/index.html
+++ b/index.html
@@ -152,105 +152,107 @@
 
           <div class="card-deck">
           <div class="card">
-          <img class="card-img-top" src="https://udemy-images.udemy.com/course/240x135/1496440_be26_2.jpg" alt="Card image cap">
+          <img class="card-img-top" src="https://udemy-images.udemy.com/course/240x135/1744722_fed1_3.jpg" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">Certified Advanced Angelic Healing</h5>
-            <p class="card-text">Tania Magdalene</p>
+            <h5 class="card-title">Artifial Intelligence 2018: Build The Most Powerful...</h5>
+            <p class="card-text">Hadelin de Ponteves, Kirill Erem...</p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
            </div>
         </div>
           <div class="card">
           <img class="card-img-top" src="https://udemy-images.udemy.com/course/240x135/1576710_292f_5.jpg" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">2018 Complete Public Speaking Masterclass Fo...</h5>
-              <p class="card-text">Tj Walker</p>
+            <h5 class="card-title">Tableau 10 A-Z: Hands-On Tableau Training For Dat...</h5>
+              <p class="card-text">Kirill Eremenko, SuperDataScien...</p>
               <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
           </div>
           </div>
           <div class="card">
           <img class="card-img-top" src="https://udemy-images.udemy.com/course/240x135/1330590_3cb3.jpg" alt="Card image cap">
             <div class="card-body">
-               <h5 class="card-title">Become A Learning Machine 2.0: Read 300...</h5>
-                <p class="card-text">Brandon Hakim</p>
+               <h5 class="card-title">How to Start an Amazon FBA Store on a Tight...</h5>
+                <p class="card-text">Theo McArthur</p>
                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
           </div>
           <div class="card">
           <img class="card-img-top" src="https://udemy-images.udemy.com/course/240x135/1483618_54b1_3.jpg" alt="Card image cap">
             <div class="card-body">
-               <h5 class="card-title">Accelerated Learning Acquire any Skill at 10x..</h5>
-                <p class="card-text">Nandini Rathi</p>
+               <h5 class="card-title">Become a Product Manager | Learn the Ski...</h5>
+                <p class="card-text">Cole Mercer, Evan Kimbrell</p>
                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
           </div>
           <div class="card">
           <img class="card-img-top" src="https://udemy-images.udemy.com/course/240x135/1540516_7603.jpg" alt="Card image cap">
             <div class="card-body">
-               <h5 class="card-title">CBT Cognitive Behavioral Life Coach Certification</h5>
-                <p class="card-text">Joeel & Natalie Rivera</p>
+               <h5 class="card-title">Natural Language Processing with Deep...</h5>
+                <p class="card-text">Lazy Programmer Inc.</p>
                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
           </div>
           <div class="card">
             <img class="card-img-top" src="https://udemy-images.udemy.com/course/240x135/1606056_f9bd_3.jpg" alt="Card image cap">
               <div class="card-body">
-                <h5 class="card-title">CBT Cognitive Behavioral Life Coach Certification</h5>
-                <p class="card-title">Joeel & Natalie Rivera</p>
+                <h5 class="card-title">Advanced Al: Deep Reinforcement Learning</h5>
+                <p class="card-title">Lazy Programmer Inc.</p>
                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
               </div>         
           </div>
 
     <!--fin deuxième ligne -->
     <!-- début troisième ligne -->
+
           <div class="card-deck">
           <div class="card">
           <img class="card-img-top" src="https://udemy-images.udemy.com/course/240x135/1496440_be26_2.jpg" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">Certified Advanced Angelic Healing</h5>
-            <p class="card-text">Tania Magdalene</p>
+            <h5 class="card-title">Créer un business e-commerce Shopify...</h5>
+            <p class="card-text">Boucher Elliot</p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
            </div>
         </div>
           <div class="card">
           <img class="card-img-top" src="https://udemy-images.udemy.com/course/240x135/1576710_292f_5.jpg" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">2018 Complete Public Speaking Masterclass Fo...</h5>
-              <p class="card-text">Tj Walker</p>
+            <h5 class="card-title">Formation Complète Développeur Web</h5>
+              <p class="card-text">John Codeur</p>
               <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
           </div>
           </div>
           <div class="card">
           <img class="card-img-top" src="https://udemy-images.udemy.com/course/240x135/1330590_3cb3.jpg" alt="Card image cap">
             <div class="card-body">
-               <h5 class="card-title">Become A Learning Machine 2.0: Read 300...</h5>
-                <p class="card-text">Brandon Hakim</p>
+               <h5 class="card-title">Hacking Éthique: Le Cours Complet </h5>
+                <p class="card-text">Michel Kartner</p>
                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
           </div>
           <div class="card">
           <img class="card-img-top" src="https://udemy-images.udemy.com/course/240x135/1483618_54b1_3.jpg" alt="Card image cap">
             <div class="card-body">
-               <h5 class="card-title">Accelerated Learning Acquire any Skill at 10x..</h5>
-                <p class="card-text">Nandini Rathi</p>
+               <h5 class="card-title">APPRENDRE LE DESSIN: Le cours complet</h5>
+                <p class="card-text">Damien Barban</p>
                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
           </div>
           <div class="card">
           <img class="card-img-top" src="https://udemy-images.udemy.com/course/240x135/1540516_7603.jpg" alt="Card image cap">
             <div class="card-body">
-               <h5 class="card-title">CBT Cognitive Behavioral Life Coach Certification</h5>
-                <p class="card-text">Joeel & Natalie Rivera</p>
+               <h5 class="card-title">Maîtriser le montage Vidéo avec Adobe...</h5>
+                <p class="card-text">Jean-philippe Parein</p>
                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
           </div>
           <div class="card">
             <img class="card-img-top" src="https://udemy-images.udemy.com/course/240x135/1606056_f9bd_3.jpg" alt="Card image cap">
               <div class="card-body">
-                <h5 class="card-title">CBT Cognitive Behavioral Life Coach Certification</h5>
-                <p class="card-title">Joeel & Natalie Rivera</p>
+                <h5 class="card-title">The Ultimate Drawing Cours - Beginner to...</h5>
+                <p class="card-title">Jaysen Batchelorn Quinton Batch</p>
                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
               </div>         
           </div>
+
     <!-- fin des cards -->
 <!-- fin du middle bannière -->
 
