row + création quatrième ligne

--- a/index.html
+++ b/index.html
@@ -96,7 +96,10 @@
       <!-- début des cards -->
       <!-- première ligne des cards -->
 
-        <div class="card-deck">
+      <div class="container">
+        <div class="row">
+          <div class=".col-lg-">
+          <div class="card-deck">
           <div class="card">
           <img class="card-img-top" src="https://udemy-images.udemy.com/course/240x135/1496440_be26_2.jpg" alt="Card image cap">
           <div class="card-body">
@@ -146,6 +149,8 @@
               </div>         
           </div>
           </div>
+        </div>
+      
 
     <!-- fin de la première ligne -->
     <!-- début deuxième ligne -->
@@ -199,6 +204,7 @@
                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
               </div>         
           </div>
+        </div>
 
     <!--fin deuxième ligne -->
     <!-- début troisième ligne -->
@@ -252,6 +258,65 @@
                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
               </div>         
           </div>
+        </div>
+
+    <!-- fin troisième ligne -->
+    <!-- début quatrième ligne -->
+
+          <div class="card-deck">
+          <div class="card">
+          <img class="card-img-top" src="https://udemy-images.udemy.com/course/240x135/1655688_cd25.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Créer un business e-commerce Shopify...</h5>
+            <p class="card-text">Boucher Elliot</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+           </div>
+        </div>
+          <div class="card">
+          <img class="card-img-top" src="https://udemy-images.udemy.com/course/240x135/805992_d306_8.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Formation Complète Développeur Web</h5>
+              <p class="card-text">John Codeur</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+          </div>
+          <div class="card">
+          <img class="card-img-top" src="https://udemy-images.udemy.com/course/240x135/1011114_a6c2.jpg" alt="Card image cap">
+            <div class="card-body">
+               <h5 class="card-title">Hacking Éthique: Le Cours Complet </h5>
+                <p class="card-text">Michel Kartner</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+          <div class="card">
+          <img class="card-img-top" src="https://udemy-images.udemy.com/course/240x135/1350932_e9df_2.jpg" alt="Card image cap">
+            <div class="card-body">
+               <h5 class="card-title">APPRENDRE LE DESSIN: Le cours complet</h5>
+                <p class="card-text">Damien Barban</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+          <div class="card">
+          <img class="card-img-top" src="https://udemy-images.udemy.com/course/240x135/1348478_9381_3.jpg" alt="Card image cap">
+            <div class="card-body">
+               <h5 class="card-title">Maîtriser le montage Vidéo avec Adobe...</h5>
+                <p class="card-text">Jean-philippe Parein</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+          <div class="card">
+            <img class="card-img-top" src="https://udemy-images.udemy.com/course/240x135/874012_c7f2_3.jpg" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">The Ultimate Drawing Cours - Beginner to...</h5>
+                <p class="card-title">Jaysen Batchelorn Quinton Batch</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              </div> 
+              </div>        
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
     <!-- fin des cards -->
 <!-- fin du middle bannière -->
